<resources>
    <string name="app_name">BeSafe</string>
    <string name="personal_details">Personal details</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="nic">NIC</string>
    <string name="_76_1234567">76 1234567</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_to_besafe_signup_now">New to BeSafe? Signup now</string>
    <string name="signup">Signup</string>
    <string name="login_heading">Login</string>
    <string name="login_btn">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_link">Send link</string>
    <string name="cancel">Cancel</string>
    <string name="remeber_me">Remeber me</string>
    <string name="remember_me">Remember me</string>
    <string name="signup1">Signup</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login1">Login</string>
    <string name="resend_verification_email">Resend verification email</string>
    <string name="verify_email">Verify Email</string>
    <string name="thank_you_for_signing_up_we_ve_sent_a_verification_email_to_your_inbox_if_you_don_t_see_it_please_check_your_junk_or_spam_folder_as_well">Thank you for signing up! We\'ve sent a verification email to your inbox. If you don\'t see it, please check your junk or spam folder as well.</string>
    <string name="continue1">Continue</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="continue2">Continue</string>
    <string name="submit">Submit</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="enter_description">Enter description</string>
    <string name="name">Enter witness name</string>
    <string name="enter_property_damage">Enter property damage</string>
    <string name="emergency_response_contacted">Emergency response contacted</string>
    <string name="inform_through_besafe">Inform through BeSafe</string>
    <string name="emergency_response">Emergency Response*</string>
    <string name="witness_information">Witness Information*</string>
    <string name="incident_type">Incident Type*</string>
    <string name="enter_location">Incident location</string>
    <string name="report_incident">Report an incident</string>
    <string name="severity">Severity*</string>
    <string name="street_address">Street address</string>
    <string name="set_location_on_map">Set location on map</string>
    <string name="address">Address*</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="injuries_fatalities">Injuries/Fatalities*</string>
    <string name="property_damage">Property damage*</string>
    <string name="description">Description*</string>
    <string name="attach_photos">Attach photos/videos</string>
    <string name="additional_comments">Additional comments</string>
    <string name="enter_additional_comments">Enter additional comments</string>
    <string name="time">Time*</string>
    <string name="date">Date*</string>
    <string name="report">Report</string>
    <string name="newsfeed">Newsfeed</string>
    <string name="me">Me</string>
    <string name="post">Post now</string>
    <string name="emergency_services">Emergency Services</string>
    <string name="emergency">Emergency help nearby</string>
    <string name="set_current_location_as_address">Set current location as address</string>
    <string name="severe">Severe</string>
    <string name="moderate">Moderate</string>
    <string name="minor">Minor</string>
    <string name="enter_property_damage_details">Enter property damage details</string>
    <string name="number_of_adult_fatalities">No. of adult fatalities :-</string>
    <string name="number_of_child_fatalities">No. of child fatalities :-</string>
    <string name="number_of_injured_adults">No. of injured adults :-</string>
    <string name="number_of_injured_children">No. of injured children :-</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BeSafe</string>
    <string name="nav_header_subtitle">Your personal companion</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_report_incident">Report an incident</string>
    <string name="menu_newsfeed">Newsfeed</string>
    <string name="menu_share">Share app</string>
    <string name="menu_aboutus">About us</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_menu_bar">MenuBar</string>
    <string name="logout">Logout</string>
    <string name="nearest_hospitals">Nearest hospitals</string>
    <string name="load_more">Load more</string>
    <string name="current_location">Current Location</string>
    <string name="load_more1">Load more</string>
    <string name="emergency_services_nearby">Emergency services nearby</string>
    <string name="adult_fatalities">Adult fatalities</string>
    <string name="adult_injuries">Adult injuries</string>
    <string name="child_fatalities">Child fatalities</string>
    <string name="child_injuries">Child injuries</string>
    <string name="description1">Description</string>
    <string name="severity1">Severity</string>
    <string name="address1">Address</string>
    <string name="time1">Time</string>
    <string name="date1">Date</string>
    <string name="incident_type1">Incident type</string>
    <string name="incident_analysis">Incident analysis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id">your_default_channel_id</string>
</resources>