<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/postOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Who posted"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/incidentType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incident_type"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <TextView
                android:id="@+id/severity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/severity" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <TextView
                android:id="@+id/childInjuries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/child_injuries" />

            <TextView
                android:id="@+id/childFatalities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/child_fatalities" />

            <TextView
                android:id="@+id/adultInjuries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adult_injuries" />

            <TextView
                android:id="@+id/adultFatalities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adult_fatalities"
                android:layout_marginBottom="5dp"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerMedia"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayoutDots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                app:tabIndicatorGravity="center"
                app:tabIndicatorColor="@color/primaryColor"
                app:tabSelectedTextColor="@color/primaryColor"
                app:tabTextColor="@android:color/darker_gray"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
