<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.project.BeSafe.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_reportincident"
        android:name="com.project.BeSafe.ui.report_incident.ReportIncidentFragment"
        android:label="@string/menu_report_incident"
        tools:layout="@layout/fragment_reportincident" />

    <fragment
        android:id="@+id/nav_newsfeed"
        android:name="com.project.BeSafe.ui.newsfeed.NewsfeedFragment"
        android:label="@string/menu_newsfeed"
        tools:layout="@layout/fragment_newsfeed" />
</navigation>