<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ForgotPassword">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_email_24"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="30dp"
                android:padding="8dp"/>

            <Button
                android:id="@+id/sendLinkButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/send_link"
                android:textSize="20sp"
                android:layout_marginTop="15dp"/>

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/cancel"
                android:textSize="20sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>