<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AddPersonalDetails">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_details"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/first_name"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_person_24"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"
                android:padding="8dp" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/last_name"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_person_24"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:padding="8dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dob"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/date_of_birth"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/baseline_calendar_month_24"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:padding="8dp"
                    android:focusable="false"
                    android:clickable="true"
                    android:onClick="showDatePickerDialog" />

                <ImageButton
                    android:id="@+id/calenderIcon"
                    android:layout_width="37dp"
                    android:layout_height="29dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:padding="1dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/baseline_calendar_24"
                    app:tint="@color/black" />

            </FrameLayout>

            <EditText
                android:id="@+id/nic"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/nic"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_id_number"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"
                android:padding="8dp" />

            <EditText
                android:id="@+id/mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/_76_1234567"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_contact_phone_24"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"
                android:padding="8dp" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/submit"
                android:textSize="20sp"
                android:layout_marginTop="20dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>