<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".VerifyEmail">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verify_email"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/thank_you_for_signing_up_we_ve_sent_a_verification_email_to_your_inbox_if_you_don_t_see_it_please_check_your_junk_or_spam_folder_as_well"
                android:textSize="19sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/resendVerificationEmailButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resend_verification_email"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/blue"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/continue1"
        android:textSize="20sp"
        android:layout_marginTop="10dp" />

</LinearLayout>